--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -167,10 +167,15 @@ Agradecimientos aquí.
 \textbf{LPO} & \textbf{L}ógica de \textbf{P}rimer \textbf{O}rden\\
 \textbf{LSO} & \textbf{L}ógica de \textbf{S}egundo \textbf{O}rden\\
 \textbf{LSO} & \textbf{T}eoría de \textbf{C}omplejidad \textbf{D}escriptiva\\
-\textbf{NP} & \textbf{N}ondeterministic \textbf{P}olynomial time\\
+\textbf{NP} & \textbf{N}ondeterministic \textbf{P}olynomial time (clase de complejidad)\\
 \textbf{PDDL} & \textbf{P}lanning \textbf{D}omain \textbf{D}efinition \textbf{L}anguage \\
+\textbf{PH} & \textbf{P}olynomial \textbf{H}ierarchy (clase de complejidad)\\
 \textbf{SAT} & boolean \textbf{SAT}isfiability\\
 \textbf{TCD} & \textbf{T}eoría de \textbf{C}omplejidad \textbf{D}escriptiva\\
+\textbf{Fun} & función total\\
+\textbf{Inj} & función total inyectiva\\
+\textbf{PFun} & función parcial\\
+\textbf{PInj} & función parcial inyectiva\\
 }
 
 %% ----------------------------------------------------------------
