--- a/report/capitulos/capitulo2.tex
+++ b/report/capitulos/capitulo2.tex
@@ -1,14 +1,19 @@
 % Chapter 2
 
-\chapter{Diseño de la herramienta}
+\chapter{Traducción de problemas NP}
 \label{Chapter2}
-\lhead{Capítulo 2. \emph{Diseño de la herramienta}}
+\lhead{Capítulo 2. \emph{Traducción de problemas NP}}
+Este capítulo describe el diseño de una herramienta capaz de transformar una
+descripción en alto nivel de un problema, expresada en un lenguaje basado en la
+lógica de segundo orden, en un problema de planificación de clase de
+complejidad equivalente.
 
 \section{Diseño del lenguaje}
 
+
 \section{Reducción base}
-\subsubsection{Reducción del dominio}
-\subsubsection{Reducción del problema}
+\subsection{Reducción del dominio}
+\subsection{Reducción del problema}
 
 \section{Propiedades formales}
 \subsection{Demostración: reducción a STRIPS}
