--- a/report/capitulos/capitulo4.tex
+++ b/report/capitulos/capitulo4.tex
@@ -1,10 +1,5 @@
 % Chapter 4
 
-\chapter{Experimentos y resultados}
+\chapter{Traducción de problemas PH}
 \label{Chapter4}
-\lhead{Capítulo 4. \emph{Experimentos y resultados}}
-
-\section{Modelaje de problemas NP}
-\section{Diseño de los experimentos}
-\section{Resultados del planificador \texttt{M}}
-\section{Resultados del planificador \texttt{num2sat}}
+\lhead{Capítulo 4. \emph{Traducción de problemas PH}}
