--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -202,7 +202,7 @@ Agradecimientos aquí.
 \input{./capitulos/capitulo2}
 \input{./capitulos/capitulo3}
 \input{./capitulos/capitulo4}
-%\input{./capitulos/capitulo5}
+\input{./capitulos/capitulo5}
 \input{./capitulos/conclusiones}
 
 %% ----------------------------------------------------------------
