--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -19,6 +19,9 @@
 \usepackage{algorithm}
 \usepackage{float}
 \usepackage{epigraph}
+\usepackage{array}
+\usepackage{tabularx}
+\usepackage{caption}
 \usepackage[utf8]{inputenc}
 \usepackage[fixlanguage]{babelbib}
 %\usepackage[letterpaper, inner=3cm, outer=2cm]{geometry}
@@ -49,6 +52,9 @@
 \newcommand{\SOAEA}{\ensuremath{\text{SO}\forall\exists\forall}}
 \newcommand{\Q}{\ensuremath{\mathcal{Q}}}
 \newcommand{\struc}{\text{STRUC}}
+\newcommand{\FT}{\ensuremath{\mathfrak{F}}}
+\newcommand{\eq}{\equiv}
+\newcommand{\pwin}{mkspw}
 \renewcommand{\models}{\vDash}
 
 \parindent 3ex % Agrega sangrías de 3 espacios (3 veces el espacio de la x)
@@ -56,6 +62,8 @@
 \setlength{\parskip}{16.5pt} % Interparrafo 16.5pt
 %\oddsidemargin 3cm
 \topmargin 2cm
+
+%! referencias manera estandar
 
 %%%% Título
 \begin{titlepage}
