--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -168,7 +168,7 @@ Agradecimientos aquí.
 %% ----------------------------------------------------------------
 \setstretch{1.5}  % Set the line spacing to 1.5, this makes the following tables easier to read
 \clearpage  % Start a new page
-\lhead{\emph{Acrónimos}}  % Set the left side page header to "Abbreviations"
+\lhead{\emph{Acrónimos y símbolos}}  % Set the left side page header to "Abbreviations"
 \listofsymbols{ll}  % Include a list of Abbreviations (a table of two columns)
 {
 % \textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
@@ -184,6 +184,11 @@ Agradecimientos aquí.
 \textbf{Inj} & función total inyectiva\\
 \textbf{PFun} & función parcial\\
 \textbf{PInj} & función parcial inyectiva\\
+&\\
+\hline
+&\\
+$\iff$ & doble implicación, si y sólo si\\
+$\Rightarrow$ & implicación lógica
 }
 
 %% ----------------------------------------------------------------
